Fix for issue 2  “subpages shortcut”
If Yellow was installed in a subfolder, the “subpages shortcut” did not
contain the location of the subfolder.

--- a/update.ini
+++ b/update.ini
@@ -1,9 +1,9 @@
 # Yellow update files
 
 Plugin: YellowBurgerMenu
-Version: 0.1.6
+Version: 0.1.7
 Author: richi
 
+system/plugins/burger-menu.css: burger-menu.css,create
 system/plugins/burger-menu.php: burger-menu.php,create,update
-system/plugins/burger-menu.css: burger-menu.css,create,update
 system/themes/snippets/navigation-burger-menu.php: navigation-burger-menu.php,create,update
